Changed references in Ds.Test.csproj

--- a/test/data-structure/Ds.Test.csproj
+++ b/test/data-structure/Ds.Test.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DataStructure\Ds.csproj" />
+    <ProjectReference Include="..\..\src\data-structure\Ds.csproj" />
   </ItemGroup>
 
 </Project>
