--- a/test/data-structure/Ds.Test.csproj
+++ b/test/data-structure/Ds.Test.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\..\src\data-structure\Ds.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Operation\" />
+  </ItemGroup>
+
 </Project>
