Previous commit had errors. They are removed.

--- a/src/hacker-rank/HackerRank.csproj
+++ b/src/hacker-rank/HackerRank.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Algo\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
